First version from create-local-app

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
     - name: Test
       run: |
         # Test our applications
+        cd explorer && go test ./...
         cd testapp1 && go test ./...
         cd testapp2 && go test ./...
         # Test libraries (may have some expected failures)
