--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "namester"]
 	path = namester
 	url = git@github.com:TrueBlocks/trueblocks-namester.git
+[submodule "dev-tools/create-local-app"]
+	path = dev-tools/create-local-app
+	url = https://github.com/TrueBlocks/create-local-app.git
