--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,7 @@ jobs:
       run: |
         # Test our applications
         cd explorer && go test ./...
-        cd testapp1 && go test ./...
-        cd testapp2 && go test ./...
+        cd namester && go test ./...
         # Test libraries (may have some expected failures)
         cd libs/trueblocks-sdk && go test ./... || echo "SDK tests completed with expected issues"
         cd libs/trueblocks-sdk && go test ./...
