--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
         # Test our applications
         cd explorer && go test ./...
         cd namester && go test ./...
+        cd dalleserver && TB_DALLE_SKIP_IMAGE=1 go test ./...
         # Test libraries (may have some expected failures)
         cd libs/trueblocks-sdk && go test ./... || echo "SDK tests completed with expected issues"
         cd libs/trueblocks-sdk && go test ./...
