--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 [submodule "dev-tools/create-local-app"]
 	path = dev-tools/create-local-app
 	url = https://github.com/TrueBlocks/create-local-app.git
+[submodule "dalleserver"]
+	path = dalleserver
+	url = https://github.com/TrueBlocks/trueblocks-dalleserver.git
+	branch = main
