--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -13,10 +13,12 @@ MD030: false
 MD031: false
 MD032: false
 MD033: false
+MD034: false
 MD036: false
 MD040: false
 MD041: false
 MD046: false
 MD047: false
 MD052: false
+MD055: false
 MD058: false
