--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,6 @@
 [submodule "chifra"]
 	path = chifra
 	url = https://github.com/TrueBlocks/trueblocks-chifra.git
+[submodule "khedra"]
+	path = khedra
+	url = https://github.com/TrueBlocks/trueblocks-khedra
